[package]
name = "cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
humantime = "2"
chrono ="0.4"
clap = { version = "3.2", features = ["derive", "color"]}
log = "0.4"
itertools ="0.10"
env_logger = "0.9"
color-eyre = "0.6"
thiserror = "1"


walkdir = "2"
