[package]
name = "cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
humantime = "2"
chrono ="0.4"
clap = { version = "4.5", features = ["derive", "color"]}
log = "0.4"
itertools ="0.14"
env_logger = "0.11"
color-eyre = "0.6"
thiserror = "2"


walkdir = "2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
